<resources>
    <string name="app_name">Spot Guide</string>

    <!--  Error  -->
    <string name="error__location_permission_denied_rationale">This permission is mandatory for recommendation spots near you.</string>
    <string name="error__storage_permission_denied_rationale">This permission is mandatory for pick images from yor phone.</string>
    <string name="error__spots_load">Spots loading failed.</string>
    <string name="error__images_load">Images loading failed.</string>
    <string name="error__spot_upload">Spot upload failed.</string>
    <string name="error__log_in">Unable to log in. Check username and password and try again.</string>
    <string name="error__user_loading">Unable to load user with this email.</string>
    <string name="error__location_not_available">Current location is not available.</string>
    <string name="error__user_not_saved">Unable to update information right now.</string>
    <string name="error__today_spot_not_saved">Unable to add today spot/</string>
    <string name="error__add_spot_review">Unable to post your review. Try again later</string>
    <string name="error__register">Unable to register. Check if information you provided are correct and try again.</string>

    <!--  On boarding  -->
    <string name="on_boarding__community_spots">Spots are created by community - riders from all corners of world. If you saw good spot share it with community as they share theirs with you.</string>
    <string name="on_boarding__add_review">You can add your review on created spots, your experience and overall opinion.</string>
    <string name="on_boarding__share_tricks">Share your tricks on spots with your clip from Instagram or YouTube.</string>
    <string name="on_boarding__next">Next</string>

    <!--  Map  -->
    <string name="map__add_spot">Add</string>
    <string name="map__navigate">Navigate</string>
    <string name="map__description">Description</string>
    <string name="map__add_review">Add review</string>
    <string name="map__unknown_location">Unknown location</string>

    <!--  Spot detail  -->
    <string name="spot_detail__parking">Parking</string>
    <string name="spot_detail__today_spot">I\'ll be here at...</string>
    <string name="spot_detail__today_spot_with_time">I\'ll be here at %1$s</string>
    <string name="spot_detail__crew_members_here">See who will be here today...</string>
    <string name="spot_detail__reviews">Reviews</string>
    <string name="spot_detail__author">Author</string>

    <!--  Add spot  -->
    <string name="add_spot__header">Add spot</string>
    <string name="add_spot__spot_name_hint">Spot name...</string>
    <string name="add_spot__category">Category</string>
    <string name="add_spot__chose_type">Chose type</string>
    <string name="add_spot__ground_quality">Ground quality</string>
    <string name="add_spot__description">Description</string>
    <string name="add_spot__description_hint">Tell something more about this spot...</string>
    <string name="add_spot__cancel">Cancel</string>
    <string name="add_spot__confirm">Confirm</string>
    <string name="add_spot__photos">Photos</string>

    <!--  Gallery  -->
    <string name="gallery__screen_title">Gallery</string>
    <string name="gallery__camera">Camera</string>
    <string name="gallery__confirm">Confirm</string>

    <!--  Login  -->
    <string name="login__title">Spot Guide</string>
    <string name="login__login">Log In</string>
    <string name="login__username">Username</string>
    <string name="login__email">E-mail</string>
    <string name="login__password">Password</string>
    <string name="login__no_account">Don\'t have an account?</string>
    <string name="login__register">Register</string>
    <string name="login__existing_account">Already have an account?</string>

    <!--  Navigation Drawer  -->
    <string name="drawer__open">Open</string>
    <string name="drawer__close">Close</string>

    <!--  Bottom nav bar menu  -->
    <string name="bar_menu_map">Map</string>
    <string name="bar_menu_profile">Profile</string>
    <string name="bar_menu_settings">Settings</string>
    <string name="bar_menu_crew">Crew</string>

    <!--  Profile  -->
    <string name="profile__friends">Friends</string>
    <string name="profile__spots">Spots</string>
    <string name="profile__edit">Edit</string>
    <string name="profile__about_me">About me</string>
    <string name="profile__sponsors">Sponsors</string>
    <string name="profile__instagram">Instagram</string>
    <string name="profile__username">Username</string>
    <string name="profile__full_name">Full name</string>
    <string name="profile__stance">Stance</string>
    <string name="profile__edit_header">Edit profile</string>
    <string name="profile__change_profile_picture">Change</string>
    <string name="profile__save">Save</string>
    <string name="profile__user_saved">Information successfully updated</string>

    <!--  Crew  -->
    <string name="crew__screen_header">Crew</string>
    <string name="crew__members">Members</string>
    <string name="crew__requests">Requests</string>
    <string name="crew__accept">Accept</string>
    <string name="crew_decline">Decline</string>
    <string name="crew__already_members">You are together in one crew</string>
    <string name="crew__declined_membership">Crew member request was declined</string>

    <!--  Today spot  -->
    <string name="today_spot__skate_session">Today session at:</string>
    <string name="today_spot__add">Add</string>
    <string name="settings__log_out">Log out</string>

</resources>