<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.g3.spot_guide.views.AppBarView
        android:id="@+id/appBarV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/bottomButtonsV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/spotLocationTV"
                style="@style/normal_sfpro_text__16__grey_8A8A8A"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Pri zeleznici" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/spotNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/add_spot__spot_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spotLocationTV" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:progressTint="@color/yellow__FFEC00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spotNameET" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/parkingIV"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_parking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingV" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/parkingTV"
                style="@style/normal_sfpro_text__16__grey_272637"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spot_detail__parking"
                app:layout_constraintBottom_toBottomOf="@id/parkingIV"
                app:layout_constraintStart_toEndOf="@id/parkingIV"
                app:layout_constraintTop_toTopOf="@id/parkingIV" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="@id/parkingIV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/parkingIV" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/categoryTV"
                style="@style/bold_sfpro_text__16__black_333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_spot__category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parkingIV" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chooseTypeB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_spot__chose_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryTV" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choosedTypeB"
                style="@style/Button.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_spot__chose_type"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryTV" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/groundQualityTV"
                style="@style/bold_sfpro_text__16__black_333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_spot__ground_quality"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/choosedTypeB" />

            <com.g3.spot_guide.views.EmojiRatingView
                android:id="@+id/groundQualityRatingV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groundQualityTV" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/photosTV"
                style="@style/bold_sfpro_text__16__black_333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_spot__photos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groundQualityRatingV" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/addPhotosIV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_add"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/photosTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/photosTV" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photosRV"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginTop="12dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addPhotosIV"
                tools:listitem="@layout/spot_photo__item" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionTV"
                style="@style/bold_sfpro_text__16__black_333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/map__description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photosRV" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/add_spot__description_hint"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionET"
                    style="@style/normal_sfpro_text__16__grey_8A8A8A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.g3.spot_guide.views.BottomButtonsView
        android:id="@+id/bottomButtonsV"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>