<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.g3.spot_guide.views.FavoriteSpotView
            android:id="@+id/favoriteSpotV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/spotNameTV"
            style="@style/bold_sfpro_text__36__black_333333"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/favoriteSpotV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Krivan 6 stairs" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/spotLocationTV"
            style="@style/normal_sfpro_text__16__grey_272637"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spotNameTV"
            tools:text="Pri zeleznici, Krivan, SK" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigateB"
            style="@style/AppButton"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/map__navigate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spotLocationTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/spotTypeTV"
            style="@style/normal_sfpro_text__16__black_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/navigateB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/navigateB"
            tools:text="Stairs" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/groundQualityGrayTV"
            style="@style/normal_sfpro_text__16__grey_272637"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_spot__ground_quality"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigateB" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/groundQualityPurpleTV"
            style="@style/normal_sfpro_text__16__purple_6B14A6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigateB"
            tools:text="Perfect" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/parkingIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_parking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groundQualityGrayTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/parkingTV"
            style="@style/normal_sfpro_text__16__grey_272637"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spot_detail__parking"
            app:layout_constraintBottom_toBottomOf="@id/parkingIV"
            app:layout_constraintStart_toEndOf="@id/parkingIV"
            app:layout_constraintTop_toTopOf="@id/parkingIV" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/parkingAllowedIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="@id/parkingIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/parkingIV" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spotCrewMemberContainerCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parkingTV">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/spotCrewMembersTV"
                style="@style/normal_sfpro_text__14__purple_6B14A6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/spot_detail__crew_members_here"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.g3.spot_guide.views.SpotGuideLoadingView
                android:id="@+id/spotCrewMembersLoadingV"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionTV"
            style="@style/bold_sfpro_text__16__black_333333"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/map__description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spotCrewMemberContainerCL" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionContentTV"
            style="@style/normal_sfpro_text__16__grey_8A8A8A"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTV"
            tools:text="Spot description loooong text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photosRV"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/descriptionContentTV" />

        <com.g3.spot_guide.views.SpotGuideLoadingView
            android:id="@+id/photosLoadingV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/photosRV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/photosRV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/spotAuthorHeaderTV"
            style="@style/bold_sfpro_text__16__black_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/spot_detail__author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photosRV" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/spotAuthorProfilePictureIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spotAuthorHeaderTV"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/spotAuthorNameTV"
            style="@style/normal_sfpro_text__16__grey_8A8A8A"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/spotAuthorProfilePictureIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spotAuthorProfilePictureIV"
            app:layout_constraintTop_toTopOf="@id/spotAuthorProfilePictureIV"
            tools:text="Michal Gaborik" />

        <com.g3.spot_guide.views.BottomButtonView
            android:id="@+id/todaySpotV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spotAuthorProfilePictureIV" />

        <View
            android:id="@+id/reviewSpacerV"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todaySpotV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reviewsTV"
            style="@style/normal_sfpro_text__12__purple_6B14A6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/spot_detail__reviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewSpacerV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addReviewB"
            style="@style/AppButton"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/map__add_review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewsTV" />

        <com.g3.spot_guide.views.SpotGuideLoadingView
            android:id="@+id/reviewsLoadingV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addReviewB" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewsRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addReviewB" />

        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewsRV" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>